hphp/hack/test/typecheck/xhp/required_attr/inheritance.php
<?hh // strict

class :base { attribute int a @required; }
class :derived extends :base {}
function bar3(): :derived {
  return <derived />;
}
